# AndroidExamples

./: README.md  README_CN.md
ActionBarCompat/: AndroidManifest.xml
ActionBarDemo/: AndroidManifest.xml
ActionBarOptimize/: AndroidManifest.xml  project.properties
ActionBarSherlock/: AndroidManifest.xml
AnDevCon/: AndroidManifest.xml  README  route.gpx
AndroidLayouts/: AndroidManifest.xml
AndroidViewDemo/: AndroidManifest.xml
Android_Dev_Lib/: README.md
Android_OpenGLES3_Demo/: README.md  settings.gradle
BarcodeScanner/: AndroidManifest.xml
BinderClient/: AndroidManifest.xml
BinderClientDemo/: AndroidManifest.xml
BinderServer/: AndroidManifest.xml
CustomViewGroup/: AndroidManifest.xml
DefaultActivity/: .gitignore  AndroidManifest.xml  README
DemoTemplate/: settings.gradle
DragDemo/: settings.gradle
Draglayout/: .gitignore  README.md  build.gradle  settings.gradle
DrawablesDemo/: settings.gradle
DummyActivity/: AndroidManifest.xml
EasyFloat/: build.gradle
EasyWindow/: build.gradle
ExoVisualizer/: build.gradle
FileManager/: AndroidManifest.xml  LICENSE  README.md  build.xml
FloatWindow/: build.gradle
FloatWindow-master/: .gitignore  build.gradle
FloatingWindowDemo/: build.gradle  settings.gradle
FrameworkDemo/: build.gradle  settings.gradle
GDCatalog/: project.properties
GameDemo/: .gitignore  gradle.properties  settings.gradle
GameEngine/: AndroidManifest.xml  project.properties
GreenDroid/: AndroidManifest.xml  project.properties
GreenDroid-GoogleAPIs/: project.properties
HelloAndroidActivity/: AndroidManifest.xml  pom.xml
HotContacts/: AndroidManifest.xml
IOSVolumeDemo/: AndroidManifest.xml
IndexableListView/: AndroidManifest.xml
LazyList/: LICENSE  README.md
LearnMediaCodec/: settings.gradle
ListViewAdvanced/: AndroidManifest.xml
MaterialSpinner/: build.gradle
MyDemo/: build.gradle
MyFileManager/: AndroidManifest.xml
NDK_Demo/: .gitignore  build.gradle  settings.gradle
OpenGL/opengles-mediacodec/app/: CMakeLists.txt  CMakeLists_push.txt.1  build.gradle
OpenGL/opengles-mediacodec/app/src/main/: AndroidManifest.xml
OpenGL/opengles-mediacodec/app/src/main/cpp_push/: DZConstDefine.h  DZJNICall.cpp  DZJNICall.h  DZLivePush.cpp  DZLivePush.h  DZPacketQueue.cpp  DZPacketQueue.h  native-lib.cpp
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/: MainActivity.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/: LivePush.java  LivePushActivity.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/camera/: CameraHelper.java  CameraRender.java  CameraRenderActivity.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/camera/widget/: CameraFocusView.java  CameraView.java  RecordProgressButton.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/mcamera/: MyCameraActivity.java  MyCameraHelper.java  MyRender.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/mcamera/widget/: MyCameraView.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/mrecord/: BaseVideoRecorder.java  DefaultVideoRecorder.java  EglHelper.java  RecordActivity.java  RecorderRenderer.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/opengl/: BaseGLSurfaceView.java  BaseRender.java  DZGLSurfaceView.java  EglHelper.java  FboRender.java  IFboRender.java  Utils.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/livepush/picture/: PictureActivity.java  PictureRender.java  PictureView.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/media/: DarrenPlayer.java
OpenGL/opengles-mediacodec/app/src/main/java/com/longluo/gldemo/media/listener/: MediaErrorListener.java  MediaInfoListener.java  MediaPreparedListener.java
OpenGL/opengles-mediacodec/app/src/main/res/layout/: activity_camera_render.xml  activity_live_push.xml  activity_main.xml  activity_mycamera_render.xml  activity_picture.xml
OpenGL/opengles-mediacodec/app/src/main/res/raw/: fragment_shader.glsl  fragment_shader_camera.glsl  vertex_shader.glsl  vertex_shader_matrix.glsl
OpenGL/opengles-mediacodec/app/src/main/res/values/: attrs.xml  strings.xml
OpusDemo/: build.gradle  settings.gradle
OpusDemo/app/: CMakeLists.txt  build.gradle
OpusDemo/app/src/main/: AndroidManifest.xml
OpusDemo/app/src/main/cpp/: opus-use.cpp
OpusDemo/app/src/main/java/com/wpf/opususedemo/: MainActivity.kt
OpusDemo/app/src/main/java/com/wpf/opususedemo/presenter/: DecodeOpusPresenter.kt
OpusDemo/app/src/main/java/com/wpf/opususedemo/utils/: OpusPlayTask.kt  OpusRecorderTask.kt  OpusUtils.kt  Uilts.kt
OpusDemo/app/src/main/res/layout/: activity_main.xml
OpusDemo/app/src/main/res/values/: strings.xml  themes.xml
OpusDemo/app/src/main/res/values-night/: themes.xml
Rebooter/: AndroidManifest.xml
SendSMS/: AndroidManifest.xml
ShapeDrawable/: build.gradle
SlipButton/: AndroidManifest.xml
Socket_learning/: build.gradle
SoundRecorder/: AndroidManifest.xml
SplashScreen/: README.md  build.gradle
SplashScreenDemo/: build.gradle
ToggleButtonDemo/: AndroidManifest.xml
android_camera_v4l2/sdk_v4l2_camera/src/main/cpp/: CMakeLists.txt
android_camera_v4l2/sdk_v4l2_camera/src/main/cpp/libcamera/: CameraAPI.cpp  CameraAPI.h  CameraView.cpp  CameraView.h  Common.cpp  Common.h  DecoderFactory.cpp  DecoderFactory.h  NativeAPI.cpp  NativeAPI.h  OnLoad.cpp
android_camera_v4l2/sdk_v4l2_camera/src/main/cpp/libjpeg-turbo/: CMakeLists.txt
android_camera_v4l2/sdk_v4l2_camera/src/main/cpp/libjpeg-turbo/sharedlib/: CMakeLists.txt
android_camera_v4l2/sdk_v4l2_camera/src/main/cpp/libjpeg-turbo/simd/: CMakeLists.txt
android_camera_v4l2/sdk_v4l2_camera/src/main/cpp/libyuv/: CMakeLists.txt
android_camera_v4l2/sdk_v4l2_camera/src/main/cpp/libyuv/include/libyuv/: video_common.h
video/Chopper/app/src/main/cpp/: CMakeLists.txt
video/Chopper/app/src/main/cpp/src/: ImageSteg.cpp  ImageSteg.h  chopper-jni.cpp  chopper-jni.h  constants.h  logger.h
(+2142 files in other folders)
